# public_html_17-18

./: .gitattributes  .gitignore  LICENSE  README.md  archive.html  archive.md  business.html  business.md  cabal.config  calendar-events  circle-setup-rclone  circle.yml  events-fa17.html  events-sp17.html  events-wi17.html  events.html  events.ics  index.html  links  officers.html  officers.md  package-lock.json  package.json  resources.html  resources.md  site.hs  stack.yaml  talks.html  talks.md  ucsd-sums-github-io.cabal  webpack.config.js
css/: default.css  officers.css
events/: next  past
events/fa17/: BoardGameNight.md  BurnOutSocial.md  FunctionalProgWorkshop.md  GBM.md  LightTalk-1.md  LightTalk-2.md  MovieNightRamanujan.md  test-event.html  test-event.md
events/sp17/: Fri_Board_Meeting_5_12_17.html  Fri_Board_Meeting_5_12_17.md  Fri_Board_Meeting_5_19_17.html  Fri_Board_Meeting_5_19_17.md  Fri_Board_Meeting_5_26_17.html  Fri_Board_Meeting_5_26_17.md  Fri_Board_Meeting_6_2_17.html  Fri_Board_Meeting_6_2_17.md  Wed_Board_Meeting_5_17_17.html  Wed_Board_Meeting_5_17_17.md  Wed_Board_Meeting_5_24_17.html  Wed_Board_Meeting_5_24_17.md  Wed_Board_Meeting_5_31_17.html  Wed_Board_Meeting_5_31_17.md  board-game.html  board-game.md  elections.html  ff-planning.html  ff1.html  ff1.md  ff2.html  ff3.html  ff4.html  ff4.md  ff5.html  ff5.md  gbm.html  generated-event.html  (+26 more)
static/: app.js  bundle.js  calendar.html  calendarModule.js  datepicker.html  eventGenerator.html  package-lock.json  package.json
templates/: default.html  event-paginate.html  htaccess  ical.ics
(+463 files in other folders)
